--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="me-3 menu-item"> <i class="bi bi-book-half"></i> <a class="menu-link"
                             href="?page=references">References</a></span>
                     <span class="me-3 menu-item"> <i class="bi bi-question-circle-fill"></i> <a class="menu-link"
-                            href="?page=info">Help</a></span>
+                            href="?page=help">Help</a></span>
 
 
                 </div>
