--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-
 </head>
 
 <body>
@@ -44,18 +39,16 @@
                 </div>
                 <div class="mt-2 lh-lg ">
                     <span class="ms-1 me-2 menu-item"> <i class="bi bi-info-circle-fill"></i> <a class="menu-link"
-                            href="?">About</a></span>
+                            href="?">About • Über</a></span>
                     <span class="me-2 menu-item"> <i class="bi bi-book-half"></i> <a class="menu-link"
-                            href="?page=references">References</a></span>
+                            href="?page=references">References • Referenzen</a></span>
                     <span class="me-2 menu-item"> <i class="bi bi-question-circle-fill"></i> <a class="menu-link"
-                            href="?page=help">Help</a></span>
-
-
+                            href="?page=help">Help • Hilfe</a></span>
                 </div>
             </div>
         </div>
 
-        <div class="container noto-serif">
+        <div class="container">
             <br>
             <div id="contentDiv"></div>
             <br>
@@ -65,7 +58,8 @@
     <footer class="my-1">
         <hr class="footer-seperator">
         <div class="container mt-1">
-            <span class="text-body-tertiary">© 2025 Latinarium. All rights reserved. All information is for educational
+            <span class="text-body-tertiary">© 2025 Latinarium. All rights reserved. All information is for
+                educational
                 purposes only. This material may contain technical or typographical errors. Latinarium does not
                 guarantee its accuracy or completeness or suitability. IN NO EVENT SHALL LATINARIUM BE LIABLE FOR ANY
                 SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES RELATING TO THIS MATERIAL, FOR ANY USE OF THIS WEBSITE, OR
