--- a/assets/help.html
+++ b/assets/help.html
@@ -185,6 +185,18 @@
                             <td>-ire</td>
                             <td>-io, -ivi, -itum</td>
                         </tr>
+                        <tr>
+                            <td>-ari</td>
+                            <td>-or, -atus sum</td>
+                        </tr>
+                         <tr>
+                            <td>-eri</td>
+                            <td>-eor, -itus sum</td>
+                        </tr>
+                        <tr>
+                            <td>-iri</td>
+                            <td>-ior, -itus sum</td>
+                        </tr>
                     </tbody>
                 </table>
             </td>
@@ -209,6 +221,18 @@
                         <tr>
                             <td>-ire</td>
                             <td>-io, -ivi, -itum</td>
+                        </tr>
+                        <tr>
+                            <td>-ari</td>
+                            <td>-or, -atus sum</td>
+                        </tr>
+                         <tr>
+                            <td>-eri</td>
+                            <td>-eor, -itus sum</td>
+                        </tr>
+                        <tr>
+                            <td>-iri</td>
+                            <td>-ior, -itus sum</td>
                         </tr>
                     </tbody>
                 </table>
